tempfile/auto_impl/tests/compile-fail/fn_const_generics.stderr
error: the trait 'Greeter' cannot be implemented for Fn-traits: constant arguments are not allowed
 --> tests/compile-fail/fn_const_generics.rs:6:14
  |
6 |     fn greet<const N: usize>(&self, id: usize);
  |              ^^^^^^^^^^^^^^
